test: ReservationTimeService Mock 기반으로 개선